updated copy spacing issue

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -161,10 +161,16 @@ div .col-lg-6 {
 }
 .float_right {
   float: right;
-  margin: 5px 5px 10px 5px;
-  padding: 5px;
+  padding: 5px 15px;
   font-size: 16px;
   font-weight: bold;
+  background-color: #fff;
+}
+.leave_req {
+  margin-top: 15px;
+}
+.desk {
+  margin-top: -7px;
 }
 ul {
   list-style: none;
